--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,8 +30,8 @@
   "editor.smoothScrolling": true,
   "editor.accessibilitySupport": "off",
   "editor.minimap.enabled": true,
-  "editor.minimap.size": "fit",
-  "editor.minimap.showSlider": "always",
+  "editor.minimap.size": "proportional",
+  "editor.minimap.showSlider": "mouseover",
   "editor.minimap.renderCharacters": false,
   "editor.scrollBeyondLastLine": false,
   "editor.quickSuggestions": {
